Avoid word wrapping long song titles

--- a/webui/css/views/QueueView.css
+++ b/webui/css/views/QueueView.css
@@ -67,6 +67,8 @@
 .QueueTile .infobox > div:first-child
 {
     flex-grow:      1;
+    white-space:    nowrap;
+    overflow:       hidden;
 }
 .QueueTile .infobox > div:last-child
 {
